--- a/ensyu/11.css
+++ b/ensyu/11.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 * {
-    /* ここにGoogle Fontsのfont-family */
+    font-family: 'Noto Sans JP', sans-serif;
 }
 p.gothic {
     font-family: YuGothic, "ヒラギノ角ゴ ProN W3", メイリオ, sans-serif;
@@ -8,3 +8,13 @@ p.gothic {
 p.mincho {
     font-family: YuMincho, "ヒラギノ明朝 ProN", HGS明朝E, serif;
 }
+.fontSize{
+    font-size: 16px;
+}
+.px{font-size: 20px;}
+.em{font-size: 2em;}
+.normal{font-weight: normal;}
+.bold{font-weight: bold;}
+.left{text-align: left;}
+.center{text-align: center;}
+.right{text-align: right;}
