--- a/challenge/ch.css
+++ b/challenge/ch.css
@@ -1,1 +1,71 @@
- 
+@charset "UTF-8";
+
+*{
+    box-sizing: border-box;
+    font-family: メイリオ;
+    margin: 0;
+}
+body{
+    background: #f8d8bf;
+    margin: 0;
+    padding: 0;
+}
+article{
+    background: #fff;
+    width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 90%;
+    position: relative;
+}
+header{
+    background: #f83;
+    color: #fff;
+    margin: 0;
+    padding: 10px;
+    position: absolute;
+    top: 40px;
+    left: 0;
+}
+section{
+    border: 1px solid #ccc;
+    padding: 20px;
+
+}
+img{
+    display: block;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+h2{
+    color: #f83;
+    margin-bottom: 10px;
+}
+ul,ol{
+    text-align: left;
+    padding-left: 1.2em;    
+}
+address{
+    text-align: center;
+}
+.flexContainer{
+    display: flex;
+    justify-content: space-around;
+}
+.btnArea{
+    margin: 40px;
+}
+p.btn{
+    margin: 0 auto 40px;
+    width: 300px;
+    text-align: center;
+}
+p.btn a{
+    display: block;
+    padding: 20px;
+    background: #f83;
+    color: #fff;
+    text-decoration: #fff;
+    border-radius: 8px;
+    font-size: 1.2em;
+}
