--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -54,8 +54,7 @@ address {
 -------------------------------------------------- */
 /* ヘッダー */
 .header {
-  
-  /* メニューボタンの絶対配置の基準となる */
+  position: relative;
   padding: 15px 0 0;
   background-color: #fff;
 }
@@ -73,11 +72,11 @@ address {
   「display: none;」で非表示にしている。
   -------------------- */
 .nav-toggle {
-  
+  display: none;
 }
 /* ハンバーガーボタン */
 .btn-burger {
-  
+  position: absolute;
   /* 親要素（.header）を基準に絶対配置 */
   top: 5px;
   right: 10px;
@@ -94,7 +93,7 @@ address {
 }
 /* メニューが開いたときの、ハンバーガーボタンの画像を指定 */
 .nav-toggle:checked~.btn-burger {
-  
+  background: url("../img/close.svg") center center / 26px 26px no-repeat;
 }
 /* ナビゲーション */
 .nav {
@@ -102,7 +101,7 @@ address {
   background: url("../img/nav_bg.png") center center / cover no-repeat;
 }
 .nav-list {
-  
+  display: none;
   /* 最初はメニュー（ul要素）を非表示にしておく指定 */
   margin: 0;
   padding-bottom: 10px;
@@ -118,7 +117,7 @@ address {
 }
 /* メニューが開いたとき、<ul>を表示する */
 .nav-toggle:checked~.nav .nav-list {
-  
+  display: block;
 }
 /* ----------ナビゲーションのスタイル指定 ここまで---------- */
 
@@ -215,8 +214,8 @@ address {
 /* 入場料（テーブル） */
 /* テーブル全体への指定 */
 .price-table {
-  
-  
+  width: 100%;
+  border-collapse: collapse;
   /* テーブルの境界線が重ねて表示する */
   
 }
@@ -290,13 +289,15 @@ address {
 @media screen and (min-width: 768px) {
   /* ヘッダー */
   .header {
-    
+    position: relative;
+    padding: 15px 0 0;
+    background-color: #fff;
   }
   /* ロゴ */
   .logo {
-    
-    
-    
+    width: 140px;
+    margin: 0 auto;
+    padding-bottom: 5px;
     
   }
   /* ハンバーガーボタン */
