--- a/ensyu/23_1.css
+++ b/ensyu/23_1.css
@@ -2,6 +2,7 @@
 * {
   box-sizing: border-box;
   font-size: 14px;
+  color: #333;
 }
 form {
   margin: 10px;
@@ -15,5 +16,8 @@ p {
   font-size: 16px;
 }
 /*ここから*/
+body{
+  background: #ddd;
+}
 
 /*ここまで*/
