--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -118,7 +118,7 @@ li {
   padding: 5px 0;
   transition: .3s;
   letter-spacing: .05em;
-  color: #333;
+  color: #232946;
 }
 .header-nav-item a:after {
   position: absolute;
@@ -130,7 +130,7 @@ li {
   transition: .3s;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  background-color: #333;
+  background-color: #f1e753;
 }
 
 .header-nav-item a:hover:after {
@@ -222,8 +222,32 @@ li {
   box-shadow: 0px 0px 0px 2px #293b6a;/* box-shadowで外枠を */
 }
 
+.btn-denim:after{
+width: 100%;
+  height: 0;
+  content:"";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background : #FFF;
+  opacity: 0;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transition: .2s;
+  z-index: -1;
+}
+
 .btn-denim:hover {
   border-style: solid;
+}
+
+.btn-denim:hover:after{
+  height: 240%;
+  opacity: 1;
+}
+
+.btn-open:active:after{
+  height: 340%;
+  opacity: 1;
 }
 
 .btn-open {
